--- a/src/mecanica_lagrangiana.tex
+++ b/src/mecanica_lagrangiana.tex
@@ -28,7 +28,7 @@ Para la física clásica, el lagrangiano de un sistema, se forma mediante la ene
 \end{definition}
 
 \begin{theorem}
-    En los términos de la definición \eqref{eq:accion}, el funcional $S_L$ es diferenciable en $\alpha$ y su valor es
+    En los términos de la definición~\eqref{eq:accion}, el funcional $S_L$ es diferenciable en $\alpha$ y su valor es
     \begin{equation}
         \label{eq:accion_diferencial}
         \begin{align}
@@ -73,7 +73,7 @@ Para la física clásica, el lagrangiano de un sistema, se forma mediante la ene
 \end{proof}
 
 \begin{definition}
-    Llamaremos \define{trayectorias}{Trayectoria} a las funciones que cumplen la ecuación de Euler-Lagrange \eqref{eq:euler-lagrange}.
+    Llamaremos \define{trayectorias}{Trayectoria} a las funciones que cumplen la ecuación de Euler-Lagrange~\eqref{eq:euler-lagrange}.
 \end{definition}
 
 
@@ -159,7 +159,7 @@ Es decir, que para trayectorias cuyos lagrangianos se diferencia por la diferenc
 
 
 \chapter{Simetrías y cantidades conservadas}
-Cuando el lagrangiano de un sistema tiene una simetría $\sigma$, éste se mantiene invariante tras aplicar la simetría, y por tanto, toda trayectoria $\alpha$ es equivalente a $\sigma(\alpha)$, y estamos en condiciones de aplicar el teorema de Noether~\ref{thm:noether} y afirmar por tanto que el flujo de Noether de $\alpha$ a $\sigma(\alpha)$ es constante.
+Cuando el lagrangiano de un sistema tiene una simetría $\sigma$, éste se mantiene invariante tras aplicar la simetría, y por tanto, toda trayectoria $\alpha$ es equivalente a $\sigma(\alpha)$, y estamos en condiciones de aplicar el teorema de Noether~\eqref{thm:noether} y afirmar por tanto que el flujo de Noether de $\alpha$ a $\sigma(\alpha)$ es constante.
 
 
 \section{Homogeneidad del espacio y conservación del momento lineal}
