--- a/src/personalizacion.tex
+++ b/src/personalizacion.tex
@@ -38,6 +38,14 @@ V\coma\psi)\textmd{ dos cartas locales}}
 \renewcommand*{\hbar}{{\mkern-1mu\mathchar'26\mkern-8mu\mathrm{h}}}
 \renewcommand{\c}{\mathrm{c}}
 \newcommand{\h}{\mathrm{h}}
+\newcommand{\amplitud}{\mathrm{A}}
+\newcommand{\longonda}{\lambda}
+\newcommand{\frecuencia}{\nu}
+\newcommand{\fase}{\alpha}
+\newcommand{\frecuenciaangular}{\omega}
+\newcommand{\longondaangular}{\mathrm{K}}
+\newcommand{\periodo}{\mathrm{T}}
+\newcommand{\energia}{\mathrm{E}}
 % Box color
 \newcommand{\colorequation}[3]{\tcboxmath[on line,
     fonttitle=\small\sffamily,
@@ -59,6 +67,7 @@ V\coma\psi)\textmd{ dos cartas locales}}
 \newcommand{\tothefour}{^4}            % postfix  4
 \newcommand{\tento}[1]{10^{#1}}
 \newcommand{\xtento}[1]{\times\tento{#1}}
+%Constantes
 \providecommand{\speedoflightsymbol}{\c}
 \providecommand{\speedoflightvalue}{2.99792458\times10^{8}}
 \providecommand{\speedoflightounits}{\meter\usk\second\inverse}
@@ -68,4 +77,10 @@ V\coma\psi)\textmd{ dos cartas locales}}
 \providecommand{\planckbarsymbol}{\hbar}
 \providecommand{\planckbarvalue}{1.054571817\times10^{-34}}
 \providecommand{\planckbarunits}{\kilogram\usk\meter\tothetwo\usk\second\inverse}
+%Unidades
+\providecommand{\mass}[1]{#1\ \kilogram}
+\providecommand{\espacio}[1]{#1\ \meter}
+\providecommand{\velocity}[1]{#1\ \meter\usk\second\inverse}
+\providecommand{\momento}[1]{#1\ \kilogram\usk\meter\usk\second\inverse}
+
 \newcommand\ct[1]{\text{\rmfamily\upshape #1}}
