--- a/src/main.tex
+++ b/src/main.tex
@@ -35,11 +35,9 @@
     \input{clasico_a_cuantico.tex}
     \input{ecuación de Schrödinger.tex}
 
-    \input{espacios_de_hilbert.tex}
+    %\input{espacios_de_hilbert.tex}
 
     %\input{matrices.tex}
-
-    %\input{estadistica_probabilidad.tex}
 
     %\input{espacio_cuantico.tex}
 
