--- a/src/personalizacion.tex
+++ b/src/personalizacion.tex
@@ -46,6 +46,7 @@ V\coma\psi)\textmd{ dos cartas locales}}
 \newcommand{\longondaangular}{\mathrm{K}}
 \newcommand{\periodo}{\mathrm{T}}
 \newcommand{\energia}{\mathrm{E}}
+\newcommand{\fuconda}{\Psi}
 % Box color
 \newcommand{\colorequation}[3]{\tcboxmath[on line,
     fonttitle=\small\sffamily,
